--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,118 +1,22 @@
-*{
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-html, 
-body {
-  height:100vh;
-  margin: 0;
-  padding: 0;
-}
-
-.container{
-  min-height: 100%;
-  height: auto;
-}
-
-.navbar{
-  height: 50px;
-  display: flex;
-  justify-content: center;
-}
-
-.search-bar{
-  display: flex;
-  margin: 5px;
-}
-
-.search-background{
-  background-color:#0262cf;
-  padding: 10px;
-  border-radius: 3px;
-  height: 19px;   
-}
-
-.main-body{
-  display: flex;
-  flex-direction: row;
-  min-height: 93vh;
-  max-height: auto;
-}
-
-.heading{
-  color: white;
-  text-align: center;
-  font-size: 30px;
-  margin: auto;
-}
-.left-content{
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-  border-right: solid 1px black;
-  min-height: 100%;
-}
-
-.middle-display{
-  width: 80%;
-  margin: auto;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.right-content{
-  width: 75%;
-  display: flex;
-  flex-direction: column;
-  height: auto;
-}
-
-.top-displayBorder{
-  background-color: white;
-  border: solid lightgray 1px;
-  width: 80%;
-  margin: auto;
-  padding: 20px;
-}
-
-.bottom-display{
-  width: 80%;
-  margin: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.input{
-  margin: 0;
-  height: 40px;
-  padding: 10px;
-  width: 80%;
-}
-
-h2{
-  margin: 10px;
-}
-
-h3{
-  margin: 5px;
+body{
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
+  margin: 0;    
+  color: #777777;
+  height: 100vh;    
 }
-
-button{
-  width: 90%;
-  margin-left: auto;
-  margin-right: auto;
-  min-height: 30px;
+.row{
+  margin: 0;   
+  
 }
-button:hover{
-  cursor: pointer;
+#header{
+  padding:15px;
+  color: white; 
+  position:fixed;
+  top:0;
+  width:100%;  
+  z-index:10; 
 }
-
-.previousSearch{
-  display: flex;
-  flex-direction: column;
-  max-height: 500px;
-  overflow: auto;
+h1,h2,h3,h4{
+margin:0;  
 }
