--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,45 +1,71 @@
-body{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  margin: 0;    
-  color: #777777;
-  height: 100vh;    
-}
-.row{
-  margin: 0;   
-  
-}
-#header{
-  padding:15px;
-  color: white; 
-  position:fixed;
-  top:0;
-  width:100%;  
-  z-index:10; 
-}
-h1,h2,h3,h4{
-margin:0;  
+* {
+  box-sizing: border-box;
 }
 
-.wrapper{
-  align-items: stretch;
-  
+body {
+  height: 100%;
+  margin: 0;
 }
-#inputGroup{
-  display:flex;
-  justify-content:stretch;
-  align-content: stretch;
-  flex-wrap: wrap-reverse;
+
+button{
+  width: 70px;
+  height: auto;
+  background-color: #ff9f43;
+  border: none;
+  border-radius: 5px;
+  transition-duration: .4s;
 }
-#searchPanel{    
-  padding: 10px 10px 0 10px;
-  width: 320px;
-  margin-bottom:0;
-  background-color: rgb(242, 242, 242);      
-  height: 100%;   
-  position: fixed;
-  z-index: 1;    
-  overflow-x: hidden;    
-  padding-top: 20px;
-  top:78px;
+
+button:hover {
+  background-color: #feca57;
+}
+
+button:focus {
+  border: none;
+  outline-color: #b2bec3;
+}
+
+header {
+  width: 100%;
+  height: 100px;
+  color: white;
+  margin-top: 0;
+  text-align: center;
+  font-size: xx-large;
+  background-color: #2f3640;
+}
+
+h1, h3, p, li {
+  font-family: 'Roboto', sans-serif;
+}
+
+header h1 {
+  margin: 0;
+  padding-top: 10px;
+}
+
+html {
+  height: 100%;
+}
+
+input {
+  border: 1px solid #cecfd2;
+  border-radius: 5px;
+}
+
+
+.container {
+  display: flex;
+  flex-direction: row;
+  max-width: 640px;
+  height: 100%;
+}
+
+.search {
+  padding: 25px;
+  background-color: #f5f6fa;
+}
+
+.search h1 {
+  line-height: 30px;
 }
