--- a/Assets/style.css
+++ b/Assets/style.css
@@ -69,3 +69,33 @@ input {
 .search h1 {
   line-height: 30px;
 }
+
+.forecast {
+  margin-top: 25px;
+  border: solid 1px #cecfd2;
+  margin-left: 5%;
+  min-width: 640px;
+  padding: 12px 15px 15px 15px;
+  height: 40%;
+}
+
+
+.five-day-container h1 {
+  margin-top: 25px;
+  margin-left: 5%;
+}
+
+.card-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.five-day-card {
+  margin-left: 58.5px;
+  width: 175px;
+  height: auto;
+  border-radius: 5px;
+  color: white;
+  font-size: larger;
+  background-color: #3498db;
+}
