--- a/Assets/style.css
+++ b/Assets/style.css
@@ -2,22 +2,17 @@
   box-sizing: border-box;
 }
 
-body {
-  height: 100%;
-  margin: 0;
-}
-
-button{
+button {
   width: 70px;
   height: auto;
-  background-color: #ff9f43;
+  background-color: #f39d60;
   border: none;
   border-radius: 5px;
-  transition-duration: .4s;
+  transition-duration: 0.4s;
 }
 
 button:hover {
-  background-color: #feca57;
+  background-color: #f5b446;
 }
 
 button:focus {
@@ -26,66 +21,75 @@ button:focus {
 }
 
 header {
-  width: 100%;
-  height: 100px;
-  color: white;
-  margin-top: 0;
+  width: flex;
+  height: 110px;
+  color: #fff;
   text-align: center;
   font-size: xx-large;
-  background-color: #2f3640;
+  background-color: #1c4d59;
+  padding: 15px;
 }
 
-h1, h3, p, li {
-  font-family: 'Roboto', sans-serif;
+#fiveDay,
+h3,
+h2,
+li,
+p {
+  font-family: "Open Sans", sans-serif;
+}
+
+#fiveDay {
+  font-size: 20px;
+}
+
+.header {
+  font-family: "Poiret One", cursive;
+  font-weight: 300;
+}
+
+h2 {
+  font-size: 20px;
 }
 
 header h1 {
-  margin: 0;
   padding-top: 10px;
-}
-
-html {
-  height: 100%;
+  margin: 0;
 }
 
 input {
   border: 1px solid #cecfd2;
   border-radius: 5px;
+  height: 40px;
+  width: auto;
 }
-
 
 .container {
   display: flex;
-  flex-direction: row;
-  max-width: 640px;
   height: 100%;
 }
 
 .search {
+  height: 100%;
+  position: sticky;
+  background-color: #e6eced;
   padding: 25px;
-  background-color: #f5f6fa;
-}
-
-.search h1 {
-  line-height: 30px;
 }
 
 .forecast {
-  margin-top: 25px;
-  border: solid 1px #cecfd2;
+  margin-top: 15px;
   margin-left: 5%;
   min-width: 640px;
-  padding: 12px 15px 15px 15px;
   height: 40%;
+  padding: 15px;
 }
 
-
 .five-day-container h1 {
-  margin-top: 25px;
+  padding-left: 12px;
   margin-left: 5%;
 }
 
 .card-row {
+  padding: 15px;
   display: flex;
   flex-direction: row;
 }
@@ -95,12 +99,13 @@ input {
   width: 175px;
   height: auto;
   border-radius: 5px;
-  color: white;
+  color: #fff;
   font-size: larger;
-  background-color: #3498db;
+  background-color: #67a8b7;
 }
 
 .five-day-container .card-text {
+  font-size: 16px;
   margin-bottom: 15px;
   padding: 10px 30px 5px 10px;
 }
@@ -113,60 +118,55 @@ input {
   margin-left: 10%;
 }
 
-.historyItems {
-  margin-top: 20px;
-}
-
-.historyItems:nth-child() {
-  margin-top: 20px;
-}
-
 img {
   width: auto;
   height: auto;
 }
 
-input {
-  height: 40px;
-  width: auto;
-}
-
 li:first-child {
-  height: 100%;
-  font-size: larger;
-  background-color: white;
+  font-size: 16px;
+  background-color: #fff;
   border: solid 1px #cecfd2;
-  border-radius: 6px 6px 0px 0px;
-  padding: 12px 5px 12px 15px;
+  border-radius: 6px 6px 0 0;
   list-style: none;
+  padding: 12px 5px 12px 15px;
 }
 
 li {
-  height: 100%;
-  font-size: larger;
-  background-color: white;
+  font-size: 16px;
+  background-color: #fff;
   border: solid 1px #cecfd2;
-  border-radius: 0px 0px 0px 0px;
-  padding: 12px 5px 12px 15px;
+  border-radius: 0 0 0 0;
   list-style: none;
+  padding: 12px 5px 12px 15px;
 }
 
 li:last-child {
-  height: 100%;
-  font-size: larger;
-  background-color: white;
+  font-size: 16px;
+  background-color: #fff;
   border: solid 1px #cecfd2;
-  border-radius: 0px 0px 6px 6px;
-  padding: 12px 5px 12px 15px;
+  border-radius: 0 0 6px 6px;
   list-style: none;
+  padding: 12px 5px 12px 15px;
 }
 
 .row {
   display: flex;
   line-height: 50%;
-  margin: 5px 5px 5px 0px;
+  margin: 5px 5px 5px 0;
 }
 
 .row * {
   margin-right: 5px;
+}
+
+body,
+html {
+  margin: 0;
+  height: 100%;
+}
+
+.historyItems,
+.historyItems:nth-child() {
+  margin-top: 20px;
 }
